2009-01-30  Lennart Staflin  <lenst@lysator.liu.se>

	* corba-browser.el (corba-browser-node-on-line)
	(corba-browser-node-has-object-p)
	(corba-browser-pos-has-object-p, corba-browser-object-on-line):
	new functions for getting information from the tree given buffer pos
	(corba-browser-object-browser): new func
	(corba-browser-keymap): new keymap
	(corba-browser-menu): new menu keymap
	(corba-browser-show-object): new command
	(corba-browser-expand-ir): add :has-object to widget
	(corba-browser-get-context): fixed
	(corba-browser-expand-ns): add :has-object and :ns-name

2008-07-27  Lennart Staflin  <lenst@lysator.liu.se>

	* corba.el (corba-locate): remove

2008-07-11  Lennart Staflin  <lenst@lysator.liu.se>

	* corba.el (corba-narrow): new name was corba-object-narrow

2002-01-31  Lennart Staflin  <lenst@lysator.liu.se>

	* corba.el (corba-get-work-buffer): set buffer unibyte
	(corba-get-connection): set buffer unibyte, and process coding to
	binary.
	(corba-file-to-object): set buffer unibyte

Fri Mar 17 20:10:24 2000  Lennart Staflin  <lenst@lysator.liu.se>

	* corba.el (corba-request-get-response): get the current client in
	every loop iteration. The client may change if there is a
	forwarding of the object.